- Fix build with `Gradle IntelliJ Plugin (1.x)` plugin - Replace deprecated interfaces with newer ones - Replace abandoned original jsch library with maintained fork
Set versions to enable installation in idea 2024.1
Update source code to build it with newer intellij libraries
Update build script to use with gradle 8.10